Login completo - splash & icon generados

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,19 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar hideBackButton color="navBar">
+    <ion-title text-center>
+      VOTACIÓN DE CONSORCIO
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <h3>BIENVENIDO!</h3>
+  <p> Cuenta: {{sesionUsuario.nombre}}<br>
+      Perfil: {{sesionUsuario.perfil}}<br>
+      Sexo: {{sesionUsuario.sexo}}</p>
+  <button ion-button color="google" icon-left block
+          (click)="cerrarSesion()">
+    <ion-icon name="md-contact"></ion-icon>
+    Cerrar sesión
+  </button>
 </ion-content>
