Login con sonido

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar hideBackButton color="navBar">
     <ion-title text-center>
-      VOTACIÓN DE CONSORCIO
+      CARGA DE IMAGENES
     </ion-title>
   </ion-navbar>
 </ion-header>
