--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+  <!-- ANIMACIONES -->
+  <link href="assets/css/animate.css" rel="stylesheet">
 
 </head>
 <body>
