plugin camara + seccion

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
       <button ion-button color="secondary" icon-left block
               (click)="irLista()">
         <ion-icon name="ios-list-box-outline"></ion-icon>
-        Lista de imágenes
+        Galería de imágenes
       </button>
     </div>
     <br><br><br>
