--- a/src/pages/camara/camara.html
+++ b/src/pages/camara/camara.html
@@ -12,7 +12,7 @@
     <!--TITULO + IMAGEN DESCRIPTIVA-->
     <ion-list>
       <ion-item>
-        <ion-label floating>Titulo</ion-label>
+        <ion-label class="tituloLabel" floating>Titulo</ion-label>
         <ion-input type="text" [(ngModel)]="titulo"></ion-input>
       </ion-item>
       <ion-item *ngIf="imagenPreview">
@@ -27,10 +27,20 @@
               <button ion-button item-left block
                       (click)="mostrar_camara()">
                   <ion-icon name="camera"></ion-icon>
-                  &nbsp;CAMARA
+                  &nbsp;Tomar Foto
               </button>
           </ion-col>
       </ion-row>
     </ion-grid>
+
+    <!--CARGAR A FIREBASE-->
+    <ion-buttons end>
+
+      <button class="buttonSubir" ion-button block
+              (click)="crear_post()"
+              [disabled]=" titulo.length <= 1 || imagenPreview.length <= 1 ">
+              <ion-icon class="iconSubir" name="ios-cloud-upload-outline"></ion-icon>
+      </button>
+    </ion-buttons>
 
 </ion-content>
