--- a/src/pages/lista/lista.html
+++ b/src/pages/lista/lista.html
@@ -13,7 +13,10 @@
       <img [src]=item.img>
       <ion-card-content>
           <ion-card-title>
+            {{item.usuario}}
             {{item.titulo}}
+            {{item.fecha}}
+            {{item.hora}}
           </ion-card-title>
       </ion-card-content>
     </ion-card>
