--- a/src/pages/camara/camara.html
+++ b/src/pages/camara/camara.html
@@ -16,7 +16,7 @@
         <ion-input type="text" [(ngModel)]="titulo"></ion-input>
       </ion-item>
       <ion-item *ngIf="imagenPreview">
-        <img [src]="imagenPreview">
+        <img class="imagen" [src]="imagenPreview">
       </ion-item>
     </ion-list>
 
