--- a/src/pages/captura/captura.html
+++ b/src/pages/captura/captura.html
@@ -10,17 +10,17 @@
   <!-- BOTON 1 -->
   <div class="cajaPanel">
     <div class="cajaBoton">
-      <button class="buttonUno" ion-button color="secondary" icon-right block
+      <button class="buttonUno" ion-button icon-right block
         (click)="verAlerta(1)">
-        Cosas lindas
+        SUBIR Cosas lindas
         <ion-icon name="md-checkmark-circle"></ion-icon>
       </button>
     </div>
     <!-- BOTON 2 -->
     <div class="cajaBoton">
-      <button class="buttonDos" ion-button color="danger" icon-right block
+      <button class="buttonDos" ion-button icon-right block
         (click)="verAlerta(2)">
-        Cosas feas
+        SUBIR Cosas feas
         <ion-icon name="md-close-circle"></ion-icon>
       </button>
     </div>
