--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,37 +1,40 @@
-<ion-header>
-  <ion-navbar hideBackButton color="navBar">
-    <ion-title text-center>
-      RELEVAMIENTO VISUAL
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content>
+  <div class="contenido">
+      <div class="body" *ngIf="!mostrarSpinner">
+        <div class="introBox">
+          <h3>BIENVENIDO!</h3>
+          <p> <strong>Perfil:</strong> {{perfil}}<br>
+        </div>
+        <div class="introBox"></div>
+        <div class="panelBotones">
+          <!--OPCIONES DE SELECCION DE IMAGEN-->
+          <ion-grid>
+            <ion-row>
+                <ion-col>
+                    <button class="buttonCamara" ion-button
+                            (click)="irTomarFoto()">
+                        <ion-icon name="camera"></ion-icon>
+                    </button>
+                </ion-col>
+                <ion-col>
+                  <button class="buttonSubir" ion-button
+                          (click)="irLista()">
+                          <ion-icon class="iconSubir" name="md-images"></ion-icon>
+                  </button>
+                </ion-col>
+            </ion-row>
+          </ion-grid>
+        </div>
+        <button class="buttonLogout" ion-button
+                (click)="cerrarSesion()">
+                <ion-icon name="md-arrow-round-back"></ion-icon>
+                <ion-icon id="userLogo" name="ios-person"></ion-icon>
+        </button>
+      </div>
 
-<ion-content padding>
-  <div class="body" *ngIf="!mostrarSpinner">
-    <h3>BIENVENIDO!</h3>
-    <p> <strong>Perfil:</strong> {{perfil}}<br>
-    <div class="panelBotones">
-      <button ion-button color="facebook" icon-left block
-              (click)="irTomarFoto()">
-        <ion-icon name="md-camera"></ion-icon>
-        Cargar imágen
-      </button>
-      <br>
-      <button ion-button color="secondary" icon-left block
-              (click)="irLista()">
-        <ion-icon name="ios-list-box-outline"></ion-icon>
-        Galería de imágenes
-      </button>
-    </div>
-    <br><br><br>
-    <button class="buttonLogout" ion-button color="google"
-            (click)="cerrarSesion()">
-      SALIR
-    </button>
-  </div>
-
-  <!-- SPINNER -->
-  <div *ngIf="mostrarSpinner" class="spinner">
-    <img src="assets/imgs/spinner_white.png" alt="spinner">
+      <!-- SPINNER -->
+      <div *ngIf="mostrarSpinner" class="spinner">
+        <img src="assets/imgs/spinner_white.png" alt="spinner">
+      </div>
   </div>
 </ion-content>
